# mutemplate

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
examples/: forloop.tpl  squares.tpl  toplevel.tpl
mutemplate/: __main__.py  compiler.py  main.py  mutemplate.py  template_body_py.txt  watcher.py
test/: .gitignore  Makefile  justfile  run-test.sh  test_main.out  test_main.py
