[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mutemplate"
description = "Compile template files into a standalone python file"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
keywords = ["micropython", "microdot", "utemplate"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/mutemplate"

[project.scripts]
mutemplate = "mutemplate.mutemplate:main"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.edit-lint]
linters = [
  "ruff check",
  "mypy",
  "pyright",
]

# vim:se sw=2:
